--- a/package.json
+++ b/package.json
@@ -17,6 +17,17 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.0.2",
+        "laravel-echo": "^1.6.0",
+        "pusher-js": "^5.0.2",
+        "sweetalert2": "^8.17.6",
+        "vue-router": "^3.1.3",
+        "vuex": "^3.1.1",
+        "youtube-api-v3-search": "^1.2.1"
     }
 }
